--- a/package.json
+++ b/package.json
@@ -3,15 +3,28 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "node_modules/.bin/mocha --timeout 30000"
   },
   "dependencies": {
+    "basic-auth-connect": "^1.0.0",
     "body-parser": "~1.18.2",
+    "bootstrap": "^4.0.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
+    "helmet": "^3.8.2",
+    "http-auth": "^3.2.3",
     "morgan": "~1.9.0",
-    "pug": "2.0.0-beta11",
+    "pg": "^7.4.1",
+    "pg-hstore": "^2.3.2",
+    "popper.js": "^1.14.0",
+    "pug": "^2.0.0-rc.4",
+    "sequelize": "^4.33.4",
     "serve-favicon": "~2.4.5"
+  },
+  "devDependencies": {
+    "mocha": "^4.0.1",
+    "supertest": "^3.1.0"
   }
 }
