--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "helmet": "^3.8.2",
     "http-auth": "^3.2.3",
     "morgan": "~1.9.0",
+    "passport": "^0.3.2",
+    "passport-http": "^0.3.0",
     "pg": "^7.4.1",
     "pg-hstore": "^2.3.2",
     "popper.js": "^1.14.0",
